[package]
name = "synos-threat-hunting"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.10"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
nom = "7.1"
petgraph = "0.6"

[dev-dependencies]
tokio-test = "0.4"
