[package]
name = "synos-zero-trust"
version = "1.0.0"
edition = "2021"
authors = ["SynOS Team"]
description = "Zero-Trust Network Architecture Policy Engine for SynOS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
jsonwebtoken = "9.3"
tracing = "0.1"
thiserror = "1.0"

[lib]
name = "zero_trust"
path = "src/lib.rs"

[[bin]]
name = "synos-zt-engine"
path = "src/main.rs"
